# llm-classification-finetuning

./: .gitignore  README.md  pyproject.toml
notebooks/: 01-eda-llm-classification.ipynb  02-baseline-llm-classification.ipynb  04-human-bias-features-xgboost.ipynb
